# pocket

./: .gitignore  Dockerfile  README.md  build_single_deploy.py  install.sh  install_native.sh
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_03_2325_b5a2a35738e2_initial_schema.py  2026_07_03_2326_e356f1a85cb2_seed_data.py  2026_07_04_0813_3e7b8f551a45_add_api_key_encrypted_to_providers.py
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: client.py  embeddings.py
backend/app/core/: __init__.py  database.py  exceptions.py  logging.py  middleware.py  repository.py  service.py
backend/app/features/: __init__.py
backend/app/models/: __init__.py  ai_job.py  analytics.py  base.py  context.py  conversation.py  journal.py  learning.py  prompt.py  provider.py  settings.py  template.py  variable.py  workspace.py
backend/app/static/: 404.html  __next._full.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  analytics.html  analytics.txt  builder.html  builder.txt  contexts.html  contexts.txt  conversations.html  conversations.txt  (+11 more)
backend/tests/: conftest.py  test_ai_foundation.py  test_context.py  test_conversation_lifecycle.py  test_database.py  test_dependency.py  test_favorite.py  test_health.py  test_infrastructure.py  test_logical_units.py  test_prompt_engine.py  test_provider.py  test_settings.py  test_single_deploy.py  test_sprint_5b.py  test_sprint_6.py  test_tags_categories.py  test_template.py  test_variable.py  test_workspace.py
(+209 files in other folders)
