[project]
name = "pocket-backend"
version = "0.1.0"
description = "Pocket — Personal Context Engineering Platform (Backend)"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PGH", "PLC", "PLE", "PLW", "TRY", "FLY", "PERF", "RUF"]
ignore = ["S101", "TRY003", "ARG002", "TC001", "TC002", "TC003", "S104", "TRY300", "E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["PLC0415"]
"app/features/tags_categories/router.py" = ["ARG001"]
